# awnft-smartcontract

./: CMakeLists.txt  LICENSE  README.txt  build-release.sh  build-testnet.sh  buyorder_testnet.sh  cancelbuyorder_testnet.sh  closemarkets.sh  closemarkets_testnet.sh  openmarkets.sh  openmarkets_testnet.sh  removeborder.sh  removemarket.sh  removeorder.sh  removesorder.sh  set-permission-action-testnet.sh  set-permission-action.sh  text_dump
include/: awmarket.hpp  awmarketplace_smartcontract.hpp
src/: CMakeLists.txt  awmarket.cpp  awmarketplace_smartcontract.cpp
